data/derived/comb/progs/unify/prog5460.ml.out
Characters 92-98:
  | true -> wwhile (f b');;
                   ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type ('a -> 'a * bool) * 'a
